# os

./: .gitattributes  .gitignore  builder.nix  config.nix  configuration.nix  flake.nix
darwin/: default.nix
darwin/builder/: default.nix  hemisphere.nix  linux.nix
hardware/: euler.nix  fermat.nix  maple.nix  riemann.nix
hardware/maple/: default.nix
hardware/maple/volt/: default.nix  kfrgb.sh
home/: default.nix  libs.nix
home/editor/nvim/: default.nix
home/env/: default.nix
home/programs/: apps.nix  default.nix  git.nix  gpg.nix  utilities.nix
home/shell/: prompt.sh  zsh.nix
home/terminal/: alacritty.nix  tmux.nix
hosts/amber/: default.nix
hosts/fury/: default.nix  hardware-configuration.nix
hosts/halo/: default.nix
hosts/mac/: default.nix
hosts/maple/: default.nix  hardware-configuration.nix  virt.nix
hosts/moss/: default.nix  hardware-configuration.nix
hosts/prisma/: default.nix  hardware-configuration.nix
modules/darwin/: default.nix
modules/home/: default.nix  ssh.nix
modules/system/: builder.nix  default.nix  desktop.nix  network.nix  ssh.nix  wireguard.nix
modules/system/wm/: default.nix  xmonad-config.cabal
modules/system/wm/lib/Mara/: ScratchPads.hs  Settings.hs
os/: default.nix  desktop.nix  init.nix  network.nix  user.nix
os/audio/: default.nix  init.nix
os/graphics/: backlight.nix  default.nix  init.nix
os/graphics/dpi/: low.nix  (+1 more)
os/services/: dns.nix  gestures.nix  init.nix  sync.nix
os/system/: acpi.nix  boot.nix  default.nix  fw.nix  init.nix  kernel.nix  nix.nix  pam.nix  settings.nix  virtualization.nix
(+86 files in other folders)
