name:          xmonad-config
version:       1.0.0
build-type:    Simple
cabal-version: >= 1.10

library
  exposed-modules: Mara.Colors
                   Mara.Theme
                   Mara.Spacing
                   Mara.Layouts
                   Mara.Keys
                   Mara.ScratchPads
                   Mara.Settings
  hs-source-dirs: lib
  build-depends:  base
                , xmonad
                , xmonad-contrib
                , xmonad-extras
                , containers
                , directory
                , process
                , X11
                , data-default
  default-language: Haskell2010